[gd_scene load_steps=5 format=2]

[ext_resource path="res://Work/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Work/simple-white.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 72.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Body" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
modulate = Color( 0.478431, 1, 0.427451, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 1 )

[node name="Tongue" type="Sprite" parent="."]

[node name="AttackingPoint" type="Area2D" parent="."]
collision_mask = 6

[node name="Sprite" type="Sprite" parent="AttackingPoint"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingPoint"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
[connection signal="area_exited" from="Body" to="." method="_on_Body_area_exited"]
[connection signal="area_entered" from="AttackingPoint" to="." method="_on_AttackingPoint_area_entered"]
[connection signal="body_entered" from="AttackingPoint" to="." method="_on_AttackingPoint_body_entered"]
